# ChangeLog for dev-ruby/mysql2
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mysql2/ChangeLog,v 1.22 2013/07/18 06:44:53 graaff Exp $

*mysql2-0.3.13 (18 Jul 2013)

  18 Jul 2013; Hans de Graaff <graaff@gentoo.org> +mysql2-0.3.13.ebuild:
  Version bump.

  27 Mar 2013; Dion Moult <moult@gentoo.org> -mysql2-0.2.18.ebuild:
  Remove dev-ruby/mysql2:0.2 due to lack of upstream support

  15 Jan 2013; Rick Farina <zerochaos@gentoo.org> mysql2-0.3.11.ebuild:
  adding ~arm keywords to net-analyzer/metasploit rdeps

  01 May 2012; Raúl Porcel <armin76@gentoo.org> mysql2-0.2.18.ebuild:
  Drop ia64/sparc keywords

  08 Apr 2012; Hans de Graaff <graaff@gentoo.org> -mysql2-0.2.7.ebuild,
  -mysql2-0.2.13.ebuild, -mysql2-0.2.17.ebuild, -mysql2-0.3.2.ebuild,
  -mysql2-0.3.6.ebuild, -mysql2-0.3.7.ebuild:
  Remove old versions.

  04 Apr 2012; Hans de Graaff <graaff@gentoo.org> mysql2-0.3.7.ebuild,
  mysql2-0.3.11.ebuild:
  Add ~ppc64 also to latest versions.

  11 Mar 2012; Brent Baude <ranger@gentoo.org> mysql2-0.3.6.ebuild:
  Marking mysql2-0.3.6 ~ppc64 for bug 396547

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> mysql2-0.3.7.ebuild:
  Add Prefix keywords, bug #396547

*mysql2-0.3.11 (22 Dec 2011)

  22 Dec 2011; Hans de Graaff <graaff@gentoo.org> +mysql2-0.3.11.ebuild:
  Version bump.

*mysql2-0.2.18 (08 Dec 2011)

  08 Dec 2011; Hans de Graaff <graaff@gentoo.org> +mysql2-0.2.18.ebuild:
  Version bump.

*mysql2-0.2.17 (22 Nov 2011)

  22 Nov 2011; Hans de Graaff <graaff@gentoo.org> +mysql2-0.2.17.ebuild:
  Version bump. Add ruby19.

*mysql2-0.2.13 (05 Oct 2011)

  05 Oct 2011; Hans de Graaff <graaff@gentoo.org> +mysql2-0.2.13.ebuild:
  Version bump.

*mysql2-0.3.7 (20 Aug 2011)

  20 Aug 2011; Hans de Graaff <graaff@gentoo.org> +mysql2-0.3.7.ebuild:
  Version bump.

  07 Aug 2011; Raúl Porcel <armin76@gentoo.org> mysql2-0.2.7.ebuild:
  Add ~ia64/~sparc wrt #351835
