@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/mysql2
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mysql2/ChangeLog,v 1.22 2013/07/18 06:44:53 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mysql2/ChangeLog,v 1.23 2013/11/08 06:42:40 graaff Exp $
+
+*mysql2-0.3.14 (08 Nov 2013)
+
+  08 Nov 2013; Hans de Graaff <graaff@gentoo.org> +mysql2-0.3.14.ebuild:
+  Version bump.
 
 *mysql2-0.3.13 (18 Jul 2013)
 
